@@ -23,3 +23,4 @@ stamp-h1
 build/*
 .qmake.stash
 *.bak
+KKEditQT/app/kkeditqtmsg
