@@ -79,7 +79,7 @@ struct msgStruct
 	char mText[MAXMSGSIZE];
 };
 
-enum msgActions {OPENFILE=100,SAVEFILE,QUITAPP,ACTIVATEAPP,OPENSESSION};
+enum msgActions {ACTIVATEAPPMSG=100,OPENFILEMSG,SAVEFILEMSG,QUITAPPMSG,OPENSESSIONMSG,GOTOLINEMSG,SEARCHDEFMSG,SELECTTABMSG,SELECTTABBYPATHMSG,BOOKMARKMSG,CLOSETABMSG,SETUSERMARKMSG,UNSETUSERMARKMASG,MOVETOMSG,SELECTBETWEENMSG,PASTEMSG,COPYMSG,CUTMSG,INSERTTEXTMSG,INSERTNLMSG,INSERTFILEMSG,PRINTFILESMSG,WAITFORKKEDITQTMSG,SHOWCONTINUEMSG,RUNTOOLMSG,ACTIVATEMENUNAMEDMSG,ACTIVATEMENULABELEDMSG,SENDPOSDATAMSG,SENDSELECTEDTEXTMSG,LASTMSG};
 
 #define MAXTEXTWIDTH 500
 
